[package]
name = "leetcode"
version = "0.1.0"
authors = ["frankstan <0027011261@ztesoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "data_structure",
    "topic_1_20",
    "topic_21_40",
    "topic_41_60",
    "topic_61_80",
    "topic_81_100",
    "topic_101_120",
    "topic_121_140",
    "topic_141_160",
    "topic_161_180",
    "topic_201_220",
    "topic_221_240",
    "topic_261_280",
    "topic_281_300",
    "topic_301_320",
    "topic_321_330",
    "topic_331_340",
    "topic_341_360",
    "topic_361_380",
    "topic_381_400",
    "topic_401_420",
    "topic_421_440",
    "topic_441_460",
    "topic_461_480",
    "topic_481_500",
    "topic_501_520",
    "topic_521_540",
    "topic_541_580/topic_541_550",
    "topic_541_580/topic_551_560",
    "topic_541_580/topic_561_570",
    "topic_541_580/topic_571_580",
    "topic_581_600",
    "topic_601_620",
    "topic_641_660",
    "topic_661_680",
    "topic_681_700",
    "topic_701_720",
    "topic_721_740",
    "topic_741_760",
    "topic_761_780",
    "topic_781_800",
    "topic_801_820",
    "topic_821_840",
    "topic_841_860",
    "topic_861_880",
    "topic_881_900",
    "topic_921_940",
    "topic_941_960",
    "topic_961_1000",
    "topic_1001_1020",
    "topic_1041_1060",
    "topic_1101_1120",
    "topic_1121_1140",
    "topic_1201_1220",
    "topic_1301_1400/topic_1301_1320",
    "topic_1301_1400/topic_1321_1340",
    "topic_1401_1420",
    "topic_1421_1440",
    "topic_1441_1460",
    "topic_1561_1580",
    "topic_1581_1600",
    "topic_1621_1640",
    "topic_1641_1700/topic_1641_1660",
    "topic_1641_1700/topic_1661_1680",
    "topic_1641_1700/topic_1681_1700",
    "topic_1701_1800/topic_1701_1720",
    "topic_1701_1800/topic_1721_1740",
    "topic_1701_1800/topic_1741_1760",
    "topic_1801_1900",
    "topic_hanota",
    "topic_lcp",
    "topic_mianshi/topic_mianshi_01",
    "topic_mianshi/topic_mianshi_02",
    "topic_mianshi/topic_mianshi_03",
    "topic_mianshi/topic_mianshi_04",
    "topic_mianshi/topic_mianshi_05",
    "topic_mianshi/topic_mianshi_06",
    "topic_mianshi/topic_mianshi_07",
    "topic_mianshi/topic_mianshi_08",
    "topic_mianshi/topic_mianshi_09",
    "topic_mianshi/topic_mianshi_10",
    "topic_mianshi/topic_mianshi_11",
    "topic_mianshi/topic_mianshi_12",
    "topic_mianshi/topic_mianshi_13",
    "topic_mianshi/topic_mianshi_14",
    "topic_mianshi/topic_mianshi_15",
    "topic_mianshi/topic_mianshi_16",
    "topic_mianshi/topic_mianshi_17",
    "topic_offer_1_40",
    "topic_offer_41_80"
]

[dependencies]
trace = "*"