[package]
name = "topic_141_160"
version = "0.1.0"
authors = ["frankstan <0027011261@ztesoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data_structure = {path = "/Users/frankstan/CLionProjects/github/leetcode_rust/data_structure"}